--- a/app/src/main/res/layout/fragment_sorting_guide.xml
+++ b/app/src/main/res/layout/fragment_sorting_guide.xml
@@ -5,20 +5,15 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingStart="25dp"
+    android:paddingEnd="25dp"
     tools:context=".SortingGuideFragment">
 
     <RelativeLayout
-        android:id="@+id/relativeLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/title2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+        android:paddingBottom="20dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -205,17 +200,16 @@
 
     <TextView
         android:id="@+id/title2"
-        android:layout_width="384dp"
-        android:layout_height="58dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:text="@string/search_the_name_of_a_waste_item_and_we_ll_tell_you_how_to_recycle_or_dispose_of_it"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.344"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
         tools:ignore="NotSibling" />
 
     <androidx.cardview.widget.CardView
@@ -234,8 +228,9 @@
 
         <SearchView
             android:id="@+id/search"
-            android:layout_width="409dp"
-            android:layout_height="37dp" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </androidx.cardview.widget.CardView>
 
 
