--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,7 @@
                     android:text="@string/rewards"
                     android:textStyle="bold"
                     android:textSize="11sp"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/dark_green"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
