--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -40,6 +40,15 @@
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp">
 
+        <TextView
+            android:id="@+id/noScheduleTV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/no_schedule"
+            android:textSize="12sp"
+            android:textColor="@color/gray"
+            android:gravity="center"
+            android:layout_marginBottom="45dp"/>
 
 
     </LinearLayout>
