--- a/app/src/main/res/layout-land/fragment_map.xml
+++ b/app/src/main/res/layout-land/fragment_map.xml
@@ -9,6 +9,8 @@
     android:scrollbarAlwaysDrawVerticalTrack="true"
     android:fadeScrollbars="false">
 
+    <!-- 3/23/24 -->
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="840dp">
@@ -29,70 +31,70 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Recycling Center Drop-off Locations"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:textColor="#FF000000"
-            android:layout_below="@id/header_image"
-            android:gravity="center_horizontal"/>
+            android:text="Recycling C
 
-        <!-- Map Fragment -->
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_below="@id/title"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp" />
 
-        <!-- Recycling Locations Text -->
-        <TextView
-            android:id="@+id/recycle_locations"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FF000000"
-            android:text="If you live in an apartment complex or condo community and don't have access to recycling, bring\nyour materials to one of our convenient drop-off locations:\n\n• Dover Shore Community Center\n  1400 Gaston Foster Road\n\n• Engelwood Neighborhood Center\n  6123 Lacosta Drive\n\n• Northwest Community Center\n  3955 WD Judge Road\n\n• Solid Waste Management Division\n  1028 South Woods Avenue\n  (Front of the building)"
-            android:layout_below="@id/map"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:textSize="18sp" />
 
-        <!-- City of Orlando Image -->
-        <ImageView
-            android:id="@+id/city_of_orlando_image"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:src="@drawable/city_of_orlando_logo_new_1"
-            android:layout_marginStart="225dp"
-            android:contentDescription="City of Orlando logo"
-            android:layout_below="@id/recycle_locations"
-            android:layout_marginTop="30dp"/>
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginBottom="60dp" /> -->
-            <!--android:layout_alignParentBottom="true"       -->
 
-        <!-- City of Orlando Text -->
-        <TextView
-            android:id="@+id/city_of_orlando_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/city_of_orlando_image"
-            android:layout_alignBottom="@+id/city_of_orlando_image"
-            android:text="© 2024 City of Orlando"
-            android:layout_marginStart="-25dp"
-            android:textColor="#FF000000" />
+
+
+
+
+    enter Drop-off Locations"
+    android:textSize="30sp"
+    android:textStyle="bold"
+    android:textColor="#FF000000"
+    android:layout_below="@id/header_image"
+    android:gravity="center_horizontal"/>
+
+    <!-- Map Fragment -->
+<androidx.fragment.app.FragmentContainerView
+android:id="@+id/map"
+android:name="com.google.android.gms.maps.SupportMapFragment"
+android:layout_width="match_parent"
+android:layout_height="250dp"
+android:layout_below="@id/title"
+android:layout_marginLeft="10dp"
+android:layout_marginRight="10dp"
+android:layout_marginTop="15dp" />
+
+    <!-- Recycling Locations Text -->
+<TextView
+android:id="@+id/recycle_locations"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:textColor="#FF000000"
+android:text="If you live in an apartment complex or condo community and don't have access to recycling, bring\nyour materials to one of our convenient drop-off locations:\n\n• Dover Shore Community Center\n  1400 Gaston Foster Road\n\n• Engelwood Neighborhood Center\n  6123 Lacosta Drive\n\n• Northwest Community Center\n  3955 WD Judge Road\n\n• Solid Waste Management Division\n  1028 South Woods Avenue\n  (Front of the building)"
+android:layout_below="@id/map"
+android:layout_marginLeft="10dp"
+android:layout_marginTop="15dp"
+android:textSize="18sp" />
+
+    <!-- City of Orlando Image -->
+<ImageView
+android:id="@+id/city_of_orlando_image"
+android:layout_width="wrap_content"
+android:layout_height="30dp"
+android:src="@drawable/city_of_orlando_logo_new_1"
+android:layout_marginStart="225dp"
+android:contentDescription="City of Orlando logo"
+android:layout_below="@id/recycle_locations"
+android:layout_marginTop="30dp"/>
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:layout_marginBottom="60dp" /> -->
+    <!--android:layout_alignParentBottom="true"       -->
+
+    <!-- City of Orlando Text -->
+<TextView
+android:id="@+id/city_of_orlando_text"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_toEndOf="@+id/city_of_orlando_image"
+android:layout_alignBottom="@+id/city_of_orlando_image"
+android:text="© 2024 City of Orlando"
+android:layout_marginStart="-25dp"
+android:textColor="#FF000000" />
 
 
     </RelativeLayout>
-</ScrollView>
-
-
-
-
-
-
-
-
-
+    </ScrollView>
