--- a/app/src/main/res/layout/calendar_cell.xml
+++ b/app/src/main/res/layout/calendar_cell.xml
@@ -1,35 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="28dp"
-    android:layout_height="25dp">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <View
+        android:id="@+id/backgroundCircle"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/current_day_circle"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cellDayText"
+        android:text="1"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/backgroundCircle"
+        app:layout_constraintTop_toTopOf="@+id/backgroundCircle"
+        app:layout_constraintRight_toRightOf="@+id/backgroundCircle"
+        app:layout_constraintLeft_toLeftOf="@+id/backgroundCircle"/>
 
     <LinearLayout
-        android:id="@+id/calendarCellLayout"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_margin="5dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:background="#E8E8E8">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/cellDayText"
+        app:layout_constraintStart_toStartOf="@+id/cellDayText"
+        app:layout_constraintEnd_toEndOf="@+id/cellDayText">
 
-        <TextView
-            android:id="@+id/cellDayText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text=""
-            android:textColor="#E8E8E8"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <View
+            android:id="@+id/greenDot"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:background="@drawable/green_dot"
+            android:visibility="gone"
+            android:layout_marginEnd="2dp"/>
+
+        <View
+            android:id="@+id/blueDot"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:background="@drawable/dark_green_dot"
+            android:visibility="gone"
+            android:layout_marginEnd="2dp"/>
+
+        <View
+            android:id="@+id/yellowDot"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:background="@drawable/medium_green_dot"
+            android:visibility="gone"
+            android:layout_marginStart="2dp"/>
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
