--- a/app/src/main/res/layout/fragment_item_information.xml
+++ b/app/src/main/res/layout/fragment_item_information.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingStart="25dp"
     android:paddingEnd="25dp"
@@ -42,7 +42,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:scrollbars="vertical"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:fadeScrollbars="false">
@@ -51,6 +52,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/item_image"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/no_image_available" />
 
             <TextView
                 android:id="@+id/item_information"
@@ -58,31 +65,33 @@
                 android:layout_height="wrap_content"
                 android:text="No items found."
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="#FF000000"
+                android:textColor="@color/black"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp" />
-
-            <ImageView
-                android:id="@+id/item_image"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_below="@+id/item_information"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/no_image_available" />
-
-            <Button
-                android:id="@+id/btnReturnToSortingGuide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Return To Sorting Guide"
                 android:layout_marginTop="20dp"
-                android:layout_below="@id/item_image"
-                android:layout_centerHorizontal="true"/>
-
+                android:layout_below="@+id/item_image"/>
 
         </RelativeLayout>
     </ScrollView>
+
+    <Button
+        style="@style/CustomButton"
+        android:id="@+id/disposeButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dispose"
+        android:textColor="@color/white"
+        android:background="@drawable/button_press_background"/>
+
+    <Button
+        style="@style/CustomButton"
+        android:id="@+id/btnReturnToSortingGuide"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/exit"
+        android:textColor="@color/green"
+        android:background="@drawable/button_background"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
 
